# halfpipers

./: Cargo.toml  README.md  build.sh
.github/: dependabot.yml
.github/workflows/: build.yml  rust-clippy.yml
src/: lint_rules.rs  linter.rs  main.rs  manifest.rs
src/app/: mod.rs
src/env/: mod.rs
src/linter/: issue.rs  mod.rs  rules.rs
src/manifest/: mod.rs
src/render/: mod.rs
tests/: .halfpipe.io  cli.rs
