[package]
name = "halfpipers"
version = "0.1.0"
edition = "2021"
description = "Pipeline renderer extraordinaire"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.0"